@@ -1,5 +1,6 @@
 import { HttpClient } from '@angular/common/http';
 import { Component, OnInit } from '@angular/core';
+import { WsLoading } from '@elements/ws-loading/ws-loading';
 import { DocumentHelper } from '@helpers/documenthelper/document.helper';
 import { Subject } from 'rxjs';
 import { takeUntil } from 'rxjs/operators';
@@ -12,6 +13,7 @@ import { takeUntil } from 'rxjs/operators';
 export class PolicyComponent implements OnInit {
 
   text;
+  loading: WsLoading = new WsLoading();
   private ngUnsubscribe: Subject<any> = new Subject();
 
   constructor(private http: HttpClient) { }
@@ -21,10 +23,16 @@ export class PolicyComponent implements OnInit {
     this.getPolicy();
   }
   getPolicy() {
+    this.loading.start();
     this.http.get('/assets/html/policy.html', { responseType: 'text' }).pipe(
       takeUntil(this.ngUnsubscribe))
       .subscribe(text => {
         this.text = text;
+        this.loading.stop();
       })
+  }
+  ngOnDestroy() {
+    this.ngUnsubscribe.next();
+    this.ngUnsubscribe.complete();
   }
 }
