@@ -6,6 +6,11 @@
 ---------------------------------------------
 - 2020-11-17                                -
 ---------------------------------------------
+.: WSM: Task: Adding loading spinner in policy page (WSM-243)
+
+---------------------------------------------
+- 2020-11-17                                -
+---------------------------------------------
 .: WSM: Task: Update Titles
 
 ---------------------------------------------
